# spritebatch-library

./: CMakeLists.txt  README.md
include/: def.h  font.h  geometry.h  glfuncs.h  matrix.h  shader.h  sprite.h  texture.h
shader/: def.glsl  labelF.glsl  labelV.glsl  spriteF.glsl  spriteG.glsl  spriteQuadF.glsl  spriteQuadV.glsl  spriteV.glsl
src/: font.c  geometry.c  gl_func.c  matrix.c  shader.c  sprite.c  sprite_quad.c  texture.c
test/: CMakeLists.txt  processRaw.py  test-script.sh
test/common-test/: CMakeLists.txt  base.c  base.h
test/graphic-test/: CMakeLists.txt  main.c
test/graphic-test/include/: ProcedureTexture.h  SceneExecutor.h
test/graphic-test/include/Scenes/: ArchimedeanScene.h  BenchmarkScene.h  CircleScene.h  PolarRoseScene.h  RotationScene.h  Scene.h  TestScene.h  circle.h
test/graphic-test/src/: ProcedureTexture.cpp  SceneExecutor.cpp  main.cpp
test/graphic-test/src/Scene/: ArchimedeanScene.cpp  CircleScene.cpp  PolarRoseScene.cpp  RotationScene.cpp  Scene.cpp  TestScene.cpp
test/unit-test/: CMakeLists.txt  main.c
utils/: glsl2CString.py
